@@ -1,5 +1,7 @@
 2014-03-17  Carl Hetherington  <cth@carlh.net>
 
+	* Improve behaviour of the position slider at the end of films.
+
 	* Version 1.66.2 released.
 
 2014-03-17  Carl Hetherington  <cth@carlh.net>
